--- a/css/creative.css
+++ b/css/creative.css
@@ -340,7 +340,7 @@ header.masthead p {
 	color:black;
 }
 
-
+/**/
 
 /*****************************TIMELINE***********************/
 .main-timeline{
