--- a/css/creative.css
+++ b/css/creative.css
@@ -340,13 +340,16 @@ header.masthead p {
 }
 .linkEducation{
 	color:#504f54;
+	opacity:0.8;
+	font-family:Helvetica;
 }
 .linkEducation:hover{
 	color:black;
+	opacity:1;
 }
 .link{
 	color:white;
-  text-decoration: none; /* no underline */
+	text-decoration: none; /* no underline */
 }
 .link:hover{
 	color:black;
@@ -362,222 +365,113 @@ header.masthead p {
 
 /****/
 /*****************************TIMELINE***********************/
-.main-timeline{
-    overflow: hidden;
-    position: relative;
-}
-.main-timeline:before{
-    content: "";
-    width: 3px;
-    height: 100%;
-    background: #d6d5d5;
-    position: absolute;
-    top: 0;
-    left: 50%;
-}
-.main-timeline .timeline{
-    padding-right: 30px;
-    position: relative;
-}
-.main-timeline .timeline:before,
-.main-timeline .timeline:after{
-    content: "";
-    display: block;
-    width: 100%;
-    clear: both;
-}
-.main-timeline .timeline:first-child:before,
-.main-timeline .timeline:last-child:before{
-    content: "";
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    border: 2px solid #d6d5d5;
-    background: #fff;
-    margin: 0 auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: -3px;
-}
-.main-timeline .timeline:last-child:before{
-    top: auto;
-    bottom: 0;
-}
-.main-timeline .timeline-icon{
-    width: 18px;
-    height: 18px;
-    border-radius: 50%;
-    background: #fff;
-    border: 2px solid #d6d5d5;
-    box-sizing: content-box;
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: -4px;
-}
-.main-timeline .timeline-icon:before{
-    content: "";
-    display: block;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: #737ab4;
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
-.main-timeline .year{
-    display: inline-block;
-    padding: 8px 20px;
-    margin: 0;
-    font-size: 14px;
-    color: #fff;
-    background: #737ab4;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    right: 35%;
-    transform: translateY(-50%);
-}
-.main-timeline .year:before{
-    content: "";
-    border-right: 18px solid #737ab4;
-    border-top: 18px solid transparent;
-    border-bottom: 18px solid transparent;
-    position: absolute;
-    top: 0;
-    left: -18px;
-}
-.main-timeline .timeline-content{
-    width: 46.5%;
-    padding: 43px 50px;
-    margin: 0 20px 0 0;
-    background: #f2f2f2;
-    position: relative;
-}
-.main-timeline .timeline-content:after{
-    content: "";
-    border-left: 20px solid #f2f2f2;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    position: absolute;
-    top: 50%;
-    right: -20px;
-    transform: translateY(-50%);
-}
-.main-timeline .title{
-    float: left;
-	 text-align: left;
 
-    font-size: 20px;
-    font-weight: bold;
-    color: #504f54;
-    margin: 0 20px 20px 0;
-}
-.main-timeline .post{
-    display: inline-block;
-    font-size: 14px;
-    color: #999;
-    margin-top: 6px;
+.timeline ul {
+  background: #60a3bc; /*cor dos blocos*/
+  padding: 0 0;
 }
 
-.main-timeline .timeline:nth-child(2n){ padding: 0 0 0 30px; }
-.main-timeline .timeline:nth-child(2n) .year{
-    right: auto;
-    left: 35%;
+.timeline ul li {
+  list-style-type: none;
+  position: relative;
+  width: 6px;
+  margin: 0 auto;
+  padding-top: 50px;
+  background: #fff;
 }
-.main-timeline .timeline:nth-child(2n) .year:before{
-    border: 18px solid transparent;
-    border-right: none;
-    border-left: 18px solid #737ab4;
-    left: auto;
-    right: -18px;
+
+.timeline ul li::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: inherit;
 }
-.main-timeline .timeline:nth-child(2n) .timeline-content{
-    float: right;
-    margin: 0 0 0 20px;
+
+.timeline ul li div {
+  position: relative;
+  bottom: 0;
+  width: 400px;
+  padding: 15px;
+  background: #d6d5d5;
 }
-.main-timeline .timeline:nth-child(2n) .timeline-content:after{
-    border-left: none;
-    border-right: 20px solid #f2f2f2;
-    right: auto;
-    left: -20px;
+
+.timeline ul li div::before {
+  content: '';
+  position: absolute;
+  bottom: 7px;
+  width: 0;
+  height: 0;
+  border-style: solid;
 }
-@media only screen and (max-width: 1200px){
-    .main-timeline .year{ right: 30%; }
-    .main-timeline .timeline:nth-child(2n) .year{ left: 30%; }
+
+.timeline ul li:nth-child(odd) div { left: 45px; }
+
+.timeline ul li:nth-child(odd) div::before {
+  left: -15px;
+  border-width: 8px 16px 8px 0;
+  border-color: transparent #F45B69 transparent transparent;
 }
-@media only screen and (max-width: 990px){
-    .main-timeline .year{ right: 25%; }
-    .main-timeline .timeline:nth-child(2n) .year{ left: 25%; }
+
+.timeline ul li:nth-child(even) div { left: -439px; }
+
+.timeline ul li:nth-child(even) div::before {
+  right: -15px;
+  border-width: 8px 0 8px 16px;
+  border-color: transparent transparent transparent #F45B69;
 }
-@media only screen and (max-width: 767px){
-    .main-timeline:before{ left: 10px; }
-    .main-timeline .timeline{
-        padding: 0 0 0 30px;
-        margin-bottom: 20px;
-    }
-    .main-timeline .timeline:last-child{ margin-bottom: 0; }
-    .main-timeline .timeline:first-child:before,
-    .main-timeline .timeline:last-child:before{ display: none; }
-    .main-timeline .timeline-icon{
-        margin: 0;
-        position: absolute;
-        top: 7px;
-        left: 0;
-    }
-    .main-timeline .year,
-    .main-timeline .timeline:nth-child(2n) .year{
-        display: block;
-        font-weight: bold;
-        margin: 0 0 32px 30px;
-        z-index: 1;
-        position: relative;
-        top: auto;
-        left: auto;
-        right: auto;
-        transform: none;
-    }
-    .main-timeline .timeline:nth-child(2n) .year:before{
-        border-left: none;
-        border-right: 18px solid #737ab4;
-        right: auto;
-        left: -18px;
-    }
-    .main-timeline .timeline-content{ padding: 20px; }
-    .main-timeline .timeline-content,
-    .main-timeline .timeline:nth-child(2n) .timeline-content{
-        width: auto;
-        float: none;
-        margin: 0 0 0 30px;
-    }
-    .main-timeline .timeline-content:after,
-    .main-timeline .timeline:nth-child(2n) .timeline-content:after{
-        border: none;
-        border-bottom: 20px solid #f2f2f2;
-        border-left: 20px solid transparent;
-        border-right: 20px solid transparent;
-        top: -20px;
-        left: 50%;
-        right: auto;
-        transform: translateX(-50%);
-    }
+
+time {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 8px;
 }
-@media only screen and (max-width: 480px){
-    .main-timeline .title{
-        float: none;
-        margin: 0;
-    }
-    .main-timeline .year,
-    .main-timeline .timeline:nth-child(2n) .year{ margin-left: 20px; }
-    .main-timeline .timeline-content,
-    .main-timeline .timeline:nth-child(2n) .timeline-content{ margin-left: 10px; }
-    .main-timeline .post{ margin: 5px 0; }
+
+.timeline ul li::after { transition: background .5s ease-in-out; }
+
+.timeline ul li.in-view::after { background: #F45B69; }
+
+.timeline ul li div {
+  visibility: hidden;
+  opacity: 0;
+  transition: all .5s ease-in-out;
 }
+
+.timeline ul li:nth-child(odd) div { transform: translate3d(200px, 0, 0); }
+
+.timeline ul li:nth-child(even) div { transform: translate3d(-200px, 0, 0); }
+
+.timeline ul li.in-view div {
+  transform: none;
+  visibility: visible;
+  opacity: 1;
+}
+@media screen and (max-width: 900px) {
+
+.timeline ul li div { width: 250px; }
+
+.timeline ul li:nth-child(even) div { left: -289px; /*250+45-6*/
+}
+}
+
+@media screen and (max-width: 600px) {
+
+.timeline ul li { margin-left: 20px; }
+
+.timeline ul li div { width: calc(100vw - 91px); }
+
+.timeline ul li:nth-child(even) div { left: 45px; }
+
+.timeline ul li:nth-child(even) div::before {
+  left: -15px;
+  border-width: 8px 16px 8px 0;
+  border-color: transparent #F45B69 transparent transparent;
+}
+}
+
 /*****************************END TIMELINE***********************/
