--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@
       background-color: rgba(68, 63, 83, 0.85) !important;
   }
   #ulAbout {
-    list-style-image: url('../img/start2.png');
+    list-style-image: url('../img/start2.PNG');
   }
 
   #headX {
