--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.html{
 
+}
+.body{
+
+}
 
 #language{
     margin-top: 20px;
@@ -101,9 +106,7 @@
   .navbar{
       background-color: rgba(68, 63, 83, 0.85) !important;
   }
-  #ulAbout {
-    list-style-image: url('../img/start2.PNG');
-  }
+
 
   #headX {
     background-color: #fff;
