--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,14 @@
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-.html{
-
+#buttonEmail{
+    margin:auto;
+    display:block;
+    padding: 12px 23px;
+    font-size: 20px;
+    margin-top: 5rem;
 }
-.body{
-
+#foot{
+    margin-top: 5rem;
 }
-
 #language{
     margin-top: 20px;
     text-align: center;
@@ -29,6 +32,7 @@
     margin-top:20px;
 }
 }
+
 #sectionSkill{
     margin-top:40px;
 }
