--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3211,6 +3211,7 @@ li::marker {
   display: inline-block;
   width: 40px;
   height: 24px;
+  margin-left: 10px;
 }
 
 /* Hide default HTML checkbox */
